2004-08-17  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/cross1.t: Remove .opd section spec.

2004-08-01  Stephane Carrez  <stcarrez@nerim.fr>

	* ld-undefined/undefined.exp: The undefine tests now work on
	68HC11 and 68HC12.

2004-07-29  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/sh64/crange3-cmpct.rd: Update.
	* ld-sh/sh64/crange3-media.rd: Update.

2004-07-27  Nitin Yewale  <nitiny@kpitcummins.com>

	* ld-h8300/h8300.exp: Addition of new test case to check
	relaxation for H8S target.
	* ld-h8300/relax-6.s: New test source file.
	* ld-h8300/relax-6.d: New test expected disassembly file.
	* ld-h8300/relax-6-coff.d: New test expected disassembly file for
	coff format.

2004-07-22  Nick Clifton  <nickc@redhat.com>

	PR/280
	* ld-h8300/relax-3-coff.d: Remove duplicated raw insn values.
	* ld-h8300/relax-3.d: Likewise.
	* ld-h8300/relax-4-coff.d: Likewise.
	* ld-h8300/relax-4.d: Likewise.
	* ld-h8300/relax-5-coff.d: Likewise.
	* ld-h8300/relax.d: Likewise.

2004-07-22  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-scripts/crossref.exp: XFAIL ia64-*-* on the first test.

2004-07-13  Nitin Yewale <nitiny@kpitcummins.com>

	* ld-h8300/h8300.exp: Addition of gcsection test case.
	* ld-h8300/gcsection.s: New test source file.
	* ld-h8300/gcsection.d: New test expected disassembly file.

2004-07-08  Maciej W. Rozycki  <macro@linux-mips.org>

	* ld-mips-elf/reloc-merge-lo16.{s,d,ld}: New test.
	* ld-mips-elf/mips-elf.exp: Run it.

2004-07-02  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-elf/frame.exp: Don't run on sh*-*-elf*.
	* ld-sh/shared-1.d: Adjust for section reordering changes.
	* ld-sh/shared-2.d: Likewise.
	* ld-sh/tlsbin-2.d: Likewise.
	* ld-sh/tlspic-2.d: Likewise.
	* ld-sh/sh64/abi32.xd: Likewise.
	* ld-sh/sh64/abi64.xd: Likewise.
	* ld-sh/sh64/cmpct1.xd: Likewise.
	* ld-sh/sh64/crange1.rd: Likewise.
	* ld-sh/sh64/crange2.rd: Likewise.
	* ld-sh/sh64/crange3-cmpct.rd: Likewise.
	* ld-sh/sh64/crange3-media.rd: Likewise.
	* ld-sh/sh64/crange3.rd: Likewise.